2007-06-03  Chris Toshok  <toshok@ximian.com>

	* compzilla/public/compzillaIControl.idl: add
	MoveToTop/MoveToBottom.

	* compzilla/chrome/content/content.js: handle onmovetotop and
	onmovetobottom by calling svc.MoveToTop and svc.MoveToBottom,
	respectively.

	* compzilla/chrome/content/windowStack.js: call
	content.onmovetotop, content.onmovetobottom, and
	content.onmoveabove.

	* compzilla/src/compzillaControl.cpp (MoveToTop): new method.
	(MoveToBottom): same.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (Filter): Call
	XCheckTypedEvent in a loop to aggregate pending damage events.
	Seems to make keypresses feel faster.  Also, remove the calls to
	GDK_DRAWABLE_XID(mRoot) everywhere, and just cache the value.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/xprops.js: Make this awesome too.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (GetSubwindowAtPoint): Make
	this more robust to failures, avoiding infinite loops if the
	window has disappeared.
	(SendMouseEvent): Fix mouse clicks by using GetTarget instead of
	GetCurrentTarget.  Previously, with FF 2.0.0.3+, motion events
	would work correctly, but clicks were always relative to 0,0.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/content.js: Add all the window types.

	* compzilla/chrome/content/atoms.js (Atoms): Make this awesome.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (Filter): Ignore
	CreateNotify, ConfigureRequest, and MapRequest events if the
	event's parent attr is not root.

	Rename minimize.js to minmax.js.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js: Add _updateContentSize, which
	increments _ignoreConfigureCount, and calls _content.onmoveresize. In the
	configure event handler, ignore the event if _ignoreConfigureCount